# local-llm-server

./: .gitignore  Makefile  README.md  gateway.toml  pyproject.toml
.github/workflows/: test.yml
docs/: connecting.md  crossplatform-plan.md  features.md  gateway.md  llama-cpp.md  mtp.md  ollama-clone-plan.md  operation.md  vllm-plan.md  vllm.md
examples/: README.md  connect_and_generate.py  generate_with_mtp.py
local_llm_server/: __init__.py  __main__.py  _venv_backend.py  cli.py  client.py  constants.py  daemon.py  gateway.py  gui.py  image.py  multipart.py  provisioner.py  proxy.py  router.py  server.py  service.py  sglang_provisioner.py  stt_server.py  tether.py  tray.py  tui.py  tui_app.py  update.py  video.py  vllm_provisioner.py
scripts/: refresh_gemma4_chat_templates.sh
tests/: conftest.py  test_cli.py  test_client.py  test_client_integration.py  test_daemon.py  test_gateway.py  test_gateway_audio.py  test_gateway_lock.py  test_gui.py  test_image.py  test_launch.py  test_model_files.py  test_multipart.py  test_provisioner.py  test_proxy.py  test_reconcile.py  test_router.py  test_server.py  test_service.py  test_sglang_provisioner.py  test_tether.py  test_tray.py  test_tui.py  test_update.py  test_update_endpoint.py  test_venv_backend.py  test_video.py  test_vllm_provisioner.py
