[project]
name = "local-llm-server"
version = "0.13.2"
description = "ローカルLLM（mlx / mlx-vlm / llama.cpp）を OpenAI 互換 API で束ねるマルチモデルゲートウェイ（サーバー）。gateway.toml のカタログを 1 ポートで配信し、model で振り分け・遅延起動・LRU 退避・MTP 高速化（Ollama 流の共有デーモン）。接続用クライアントは別パッケージ local-llm-client。"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ToPo-ToPo-ToPo" }]
keywords = ["llm", "local-llm", "mlx", "mlx-vlm", "llama.cpp", "openai", "server", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Operating System :: OS Independent",
]
# ゲートウェイ本体は標準ライブラリのみで動く（純粋な HTTP 転送＋プロセス管理）。唯一のコア依存は
# 既定起動の TUI ダッシュボード（tui_app.py）に使う textual（ターミナル運用前提のため core に置く。
# headless では遅延 import されず読み込まれない）。推論バックエンド本体は extras で導入する
# （環境マーカーで Apple Silicon のときだけ自動選択。他 OS は llama.cpp を各自）。接続用クライアントは
# 別パッケージ local-llm-client。
dependencies = [
    "textual>=8.2.7",
]

[project.optional-dependencies]
# Apple Silicon 向け mlx 系バックエンド（テキスト/vision/STT）。
mlx = [
    "mlx-lm>=0.31.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.5.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/ToPo-ToPo-ToPo/local-llm-server"

[project.scripts]
local-llm-server = "local_llm_server.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["local_llm_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
