[project]
name = "local-llm-server"
version = "0.20.1"
description = "ローカルLLM（mlx / mlx-vlm / llama.cpp）を OpenAI 互換 API で束ねるマルチモデルゲートウェイ（サーバー）。gateway.toml のカタログを 1 ポートで配信し、model で振り分け・遅延起動・LRU 退避・MTP 高速化（Ollama 流の共有デーモン）。接続用クライアントは別パッケージ local-llm-client。"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "ToPo-ToPo-ToPo" }]
keywords = ["llm", "local-llm", "mlx", "mlx-vlm", "llama.cpp", "openai", "server", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Operating System :: OS Independent",
]
# ゲートウェイ本体は標準ライブラリのみで動く（純粋な HTTP 転送＋プロセス管理）。コア依存は
# 既定起動の TUI ダッシュボード（tui_app.py）に使う textual（ターミナル運用前提のため core に置く。
# headless では遅延 import されず読み込まれない）と、メモリガード用の psutil。
# mlx 系バックエンドは環境マーカーで **Apple Silicon (macOS arm64) のときだけ自動インストール**する
# （他 OS / Intel Mac では入らず、llama.cpp を各自で用意）。なので `uv sync` だけでよく、extra 指定は不要。
# 接続用クライアントは別パッケージ local-llm-client。
dependencies = [
    "textual>=8.2.7",
    # メモリガード（max_memory_fraction）で総RAM/空き容量を取得する。クロスプラットフォーム。
    "psutil>=5.9",
    # mlx 系バックエンド（テキスト/vision/STT）。Apple Silicon でのみ解決・インストールされる。
    "mlx-lm>=0.31.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # mlx-vlm 0.6.4 は Qwen3.6 で変換・推論とも壊れる（garble）ため 0.6.4 未満に固定。
    # 直ったら上限を上げる（上げた直後は Qwen3.6 で 1+1 の sanity check を必ず行う）。
    "mlx-vlm>=0.6.3,<0.6.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "transformers<5.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/ToPo-ToPo-ToPo/local-llm-server"

[project.scripts]
gw = "local_llm_server.tui:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["local_llm_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
